syntax = "proto3";
package proto;
option go_package = "./proto";

import "generic.proto";

service AppConfigService {
	rpc Create(NewAppConfigRequest) returns (StatusResponse) {};
	rpc Update(AppConfigDetails) returns (StatusResponse) {};
	rpc Details(Id) returns (AppConfigDetails) {};
	rpc Delete(Id) returns (StatusResponse) {};
}

message AppConfigDetails {
    int64 IdConfig          = 1;
	int64 IdCurrency       = 2;
	int64 IdLanguage       = 3;
	string Theme           = 4;
	bool BiometryActivated = 5;
	bool AlertOnEmail      = 6;
	bool AlertOnMobile     = 7;
	string AppLanguage = 8;
	string AppLanguageKey = 9;
}

message AppConfig {
	int64 IdLanguage       = 1;
	int64 IdCurrency       = 2;
	string Theme           = 3;
	bool BiometryActivated = 4;
	bool AlertOnEmail      = 5;
	bool AlertOnMobile     = 6;
}

message NewAppConfigRequest {
	int64 IdLanguage       = 1;
	int64 IdCurrency       = 2;
	string Theme           = 3;
	bool BiometryActivated = 4;
	bool AlertOnEmail      = 5;
	bool AlertOnMobile     = 6;
}